--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "standardized-audio-context": "^25.1.13"
   },
   "devDependencies": {
+    "@types/node": "^15.0.2",
     "parcel": "^1.12.4",
     "typescript": "^4.1.3"
   }
